# radiobs-bot

./: pyproject.toml
radiobsmatrix/: __init__.py  __main__.py
radiobsmatrix/core/: config.py  main.py
