[project]
name = "radiobsmatrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matrix-nio>=0.25.2",
    "pydantic>=2.12.5",
    "pydantic-settings[toml,yaml]>=2.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
preview = true
target-version = "py312"
line-length = 90
exclude = [".git", "alembic"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # Perflint
    "PERF",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
    # flake8-future-annotations
    "FA",
    # flake8-todos
    "TD",
    # flake8-logging
    "LOG",
    # flake8-fixme
    "FIX",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-self
    "SLF"
]

# don't use some of the default D and SIM rules
ignore = [
  "D100",  # undocumented-public-module
  "D101",  # undocumented-public-class
  "D102",  # undocumented-public-method
  "D103",  # undocumented-public-function
  "D104",  # undocumented-public-package
  "D105",  # undocumented-magic-method
  "D106",  # undocumented-public-nested-class
  "D107",  # undocumented-public-init
  "D200",  # unnecessary-multiline-docstring
  "D203",  # incorrect-blank-line-before-class
  "D204",  # incorrect-blank-line-after-class
  "D205",  # missing-blank-line-after-summary
  "D210",  # surrounding-whitespace
  "D212",  # incorrect-blank-line-before-class
  "D400",  # missing-trailing-period
  "D401",  # non-imperative-mood
  "D403",  # first-word-uncapitalized
  "SIM105",  # suppressible-exception
  "SIM108",  # if-else-block-instead-of-if-exp
  "TD003", # missing-todo-link
]

# restrict to the PEP 257 rules
pydocstyle.convention = "pep257"

[tool.ruff.lint.isort.sections]
typing = ["typing"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "typing",
]
